# MicroView

./: 404.html  CMakeLists.txt  CNAME  LICENSE  README.md  index.html  index.rst  keybase.txt  manifest.webmanifest  setup.py  sitemap.xml  webindex.rst
2019/05/aaa/: index.html
2019/05/test/: index.html
Icons/: image-dcm.icns  image-mhd.icns  image-mnc.icns  image-vff.icns  image-vtk.icns  parallax-icon.icns  parallax-plugin.icns  x-dcm.desktop  x-l3d.desktop  x-mnc.desktop  x-vff.desktop
Linux/: PI-MicroView.desktop
PI/: __init__.py
PI/visualization/: __init__.py
PI/visualization/MicroView/: AdaptiveOtsuThresholdDialog.py  AdaptiveOtsuThresholdDialogC.py  AnisotropicSmoothingDialog.py  AnisotropicSmoothingDialogC.py  ApplicationPreferencesDialog.py  ApplicationPreferencesDialogC.py  BackgroundColourSelectorDialog.py  BackgroundColourSelectorDialogC.py  BasePlotWindow.py  ChooseFilterRadiusDialog.py  ChooseFilterRadiusDialogC.py  DICOMDIRBrowseDialog.py  DICOMDIRBrowseDialogC.py  ErodeDilateMorphologyDialog.py  ErodeDilateMorphologyDialogC.py  HelpDictionary.py  HistogramInfoGUI.py  HistogramInfoGUIC.py  ImageExportWizard.py  ImageImportDialog.py  ImageImportDialogC.py  LUTSelectionDialog.py  LUTSelectionDialogC.py  (+56 more)
Plugins/public/: setup.cfg.in  setup.py
a/: adora.ipynb
a/adora/: index.html
appendices/file-formats/: index.html
appendices/memory-performance/: index.html
appendices/raw-import-notes/: index.html
bibliography/: index.html
bone-app/: index.html
changelog/: index.html
copyright/: index.html
css/: extra.css
dev/plugin-architecture/: index.html
dev/scripting/: index.html
downloads/: index.html
faq/: index.html
features/: index.html
getting-started/: index.html
glossary/: index.html
image-registration/: index.html
images/: colour-palette.xcf  context-sensitive-menu.xcf  ctcalibration-snap.xcf  dicom-snap.xcf  histohighlight-snap.xcf  import-snap.xcf  info-snap.xcf  isosurface-snap.xcf  measurement-tool.xcf  mouse-palette.xcf  moviemaker-snap.xcf  options2-snap.xcf  overlay-snap-adv.xcf  plot-snap.xcf  plot2-snap.xcf  region-grow-snap.xcf  register-page1.xcf  render-vis+-snap.xcf  reportgen-workflow2.xcf  reportgen-workflow3.xcf  resample-snap.xcf  roi-farm.xcf  roi-snap.xcf  roiman-active_roi.xcf  roiman-boolean.xcf  roiman-displaychar_tab.xcf  roiman-geometry_bone.xcf  script-folder.xcf  snap-advancedanalysis1.xcf  snap-basicanalysis1.xcf  snap-collage1.xcf  snap-main.xcf  snap-mainscreen.xcf  stereology-basic-options.xcf  synchronize-dialog.xcf  toolbar-snap.xcf  window_level-snaps.xcf
interacting-with-microview/: index.html
microview-options/: index.html
overview/: index.html
playground/: index.html
publications/: index.html
reading-and-writing-files/: index.html
release-notes-2.5/: index.html
report-generation/: index.html
requirements/: index.html
roi-management/: index.html
roi-manager/: index.html
screen-layout/: index.html
search/: search_index.json
simple-tools/: index.html
src/: CMakeLists.txt  MicroViewConfigure.h  vtkImageInPlaceMirrorFilter.cxx  vtkImageInPlaceMirrorFilter.h  vtkImageInvertFilter.cxx  vtkImageInvertFilter.h  vtkImageMagnitude2.cxx  vtkImageMagnitude2.h  vtkImagePurify.cxx  vtkImagePurify.h  vtkImageStatistics.cxx  vtkImageStatistics.h  vtkImageStereology.cxx  vtkImageStereology.h  vtkImageTextExport.cxx  vtkImageTextExport.h  vtkInPlaceImageStencil.cxx  vtkInPlaceImageStencil.h  vtkStderrOutputWindow.cxx  vtkStderrOutputWindow.h
tools-and-plugins/: index.html
troubleshooting/: index.html
zeroconf-notes/: index.html
(+29 files in other folders)
